[project]
name = "lus"
version = "0.3.0"
requires-python = ">=3.7"
description = "A simple task-runner using KDL for configuration"
authors = [
    { name = "Jan Niklas Hasse", email = "jhasse@bixense.com" }
]
dependencies = ['kdl-py', 'expandvars']
readme = "README.md"
scripts = { lus = "lus:main" }

[tool.pytest.ini_options]
pythonpath = [
  "."
]
